--- a/resume/index.html
+++ b/resume/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <title>Jonathan Chu | Resume</title>
-
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <meta name="keywords" content="jonathan chu, web developer, engineer, resume" />
     <meta name="description" content="Jonathan Chu - Web Developer, Engineer - Resume" />
