--- a/resume/index.html
+++ b/resume/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 
-	<script src="spamspan.js" type="text/javascript"></script>
+    <script src="spamspan.js" type="text/javascript"></script>
 
 </head>
 <body>
 
 <div id="doc" class="yui-t7">
-	<div id="hd">
+    <div id="hd">
 
         <div class="yui-gc">
             <div class="yui-u first">
@@ -34,11 +34,11 @@
                 </div><!--// end: contact-info -->
             </div>
         </div><!--// .yui-gc -->
-	</div><!--// hd -->
+    </div><!--// hd -->
 
-	<div id="bd">
-		<div id="yui-main">
-			<div class="yui-b">
+    <div id="bd">
+        <div id="yui-main">
+            <div class="yui-b">
 
                 <div class="yui-gf">
 
@@ -46,7 +46,7 @@
                         <h2>Profile</h2>
                     </div>
                     <div class="yui-u">
-                        <p class="enlarge"><span>Six years'</span> experience developing and supporting a variety of critical web and desktop applications in the enterprise environment.</p>
+                        <p class="enlarge"><span>Seven years'</span> experience developing and supporting a variety of critical web and desktop applications in the enterprise environment.</p>
                     </div>
 
                 </div>
@@ -57,20 +57,20 @@
                     </div>
                     <div class="yui-u">
 
-        					<div class="talent">
+                            <div class="talent">
                                 <h2>Web Development</h2>
-        						<p>Experience developing feature-rich websites using HTML, CSS, JavaScript, PHP, Python, and the Microsoft .NET framework with meticulous pride in cross-browser compatibility.</p>
-        					</div>
+                                <p>Experience developing feature-rich websites using HTML, CSS, JavaScript, PHP, Python, and the Microsoft .NET framework with meticulous pride in cross-browser compatibility.</p>
+                            </div>
 
-        					<div class="talent">
+                            <div class="talent">
                                 <h2>LAMP Administration</h2>
-        						<p>Over four years of production experience administering and configuring Linux and Unix clusters in physical and virtualized environments (AWS).</p>
-        					</div>
+                                <p>Over four years of production experience administering and configuring Linux and Unix clusters in physical and virtualized environments (AWS).</p>
+                            </div>
 
-        					<div class="talent">
+                            <div class="talent">
                                 <h2>Project Management</h2>
-        						<p>Ability to lead and manage a wide variety of development projects in team and independent situations with emphasis on stress, load, and regression testing.</p>
-        					</div>
+                                <p>Ability to lead and manage a wide variety of development projects in team and independent situations with emphasis on stress, load, and regression testing.</p>
+                            </div>
 
                     </div>
                 </div>
@@ -82,13 +82,13 @@
                     <div class="yui-u">
                         <ul class="talent">
                             <li>HTML</li>
-                            <li>CSS</li>
-							<li>JavaScript</li>
+                            <li>CSS (SASS & LESS)</li>
+                            <li>JavaScript (MooTools, jQuery)</li>
                             <li class="last">PHP</li>
                         </ul>
 
                         <ul class="talent">
-                            <li>Python (Django)</li>
+                            <li>Python (Django & Flask)</li>
                             <li>MySQL</li>
                             <li>PostgreSQL</li>
                             <li class="last">CVS / Subversion / Git</li>
@@ -97,7 +97,7 @@
                         <ul class="talent">
                             <li>OS X</li>
                             <li>Windows XP/Vista/7</li>
-							<li>Linux (Ubuntu)</li>
+                            <li>Linux (Ubuntu, RHEL, CentOS)</li>
                             <li class="last">Unix</li>
                         </ul>
                     </div>
@@ -109,47 +109,47 @@
                     </div>
                     <div class="yui-u">
 
-   				<div class="job">
-					<h2>3atmospheres</h2>
+                <div class="job">
+                    <h2>3atmospheres</h2>
                     <h3>Founder</h3>
                     <h4>2010-Present</h4>
                     <div class="image">
                         <img src="3at-logo.gif" alt="exhibit-E logo" />
                     </div>
-					<p>Involved in full development cycle with clients, which includes producing technical and functional specifications and the development, deployment, and maintanence of dynamic web applications.</p><br />
+                    <p>Involved in full development cycle with clients, which includes producing technical and functional specifications and the development, deployment, and maintanence of dynamic web applications.</p><br />
                 </div>
 
-   				<div class="job">
-					<h2>Mammalfish</h2>
+                <div class="job">
+                    <h2>Mammalfish</h2>
                     <h3>Lead Developer</h3>
                     <h4>2011-Present</h4>
                     <div class="image">
                         <img src="mammalfish-logo.gif" alt="Mammalfish logo" />
                     </div>
-					<p>Lead developer for rachaelrayshow.com.  Analyze, build, and deploy new site features, scale production environment, maintain and improve codebase.</p><br />
+                    <p>Lead developer for rachaelrayshow.com.  Analyze, build, and deploy new site features, scale production environment, maintain and improve codebase.</p><br />
                 </div>
 
-   				<div class="job">
-					<h2>exhibit-E</h2>
+                <div class="job">
+                    <h2>exhibit-E</h2>
                     <h3>Web Developer</h3>
                     <h4>2009-2011</h4>
                     <div class="image">
                         <img src="ee-logo.gif" alt="exhibit-E logo" />
                     </div>
-					<p>Build, deploy, and support custom-tailored websites and content management systems for the art world.  Experience coding cross-browser/mailer compliant newsletters and building custom ecommerce solutions. </p><br />
+                    <p>Build, deploy, and support custom-tailored websites and content management systems for the art world.  Experience coding cross-browser/mailer compliant newsletters and building custom ecommerce solutions. </p><br />
                 </div>
 
-   				<div class="job last">
-					<h2>Con Edison Company of New York</h2>
+                <div class="job last">
+                    <h2>Con Edison Company of New York</h2>
                     <h3>System Analyst</h3>
                     <h4>2005-2009</h4>
                     <div class="image">
                         <img src="ce-logo.gif" alt="Con Edison logo" />
                     </div>
-					<p>Develop end-to-end solutions for a variety of internal and public facing websites and desktop applications.  Deploy new features and modifications to better meet the requirements of our business users.  Experience with full software development life cycle practicing test-driven development.  Maintain continuous communication with the users to create technical and functional specifications for change requests.  Troubleshoot and analyze system issues in the production environment.</p>
+                    <p>Develop end-to-end solutions for a variety of internal and public facing websites and desktop applications.  Deploy new features and modifications to better meet the requirements of our business users.  Experience with full software development life cycle practicing test-driven development.  Maintain continuous communication with the users to create technical and functional specifications for change requests.  Troubleshoot and analyze system issues in the production environment.</p>
                 </div>
 
-				</div>
+                </div>
                 </div>
 
 
@@ -168,13 +168,13 @@
 
             </div><!--// end: yui-b -->
         </div><!--// end: yui-main -->
-	</div><!--// end: bd -->
+    </div><!--// end: bd -->
 
 
     <!--// FOOTER -->
-	<div id="ft">
-				<p>Jonathan Chu &mdash; <span class="spamspan"><span class="u">jonathan.chu</span>[at]<span class="d">me [dot] com</span></span> &ndash; (347)-503-9000</p>
-	</div><!--// footer -->
+    <div id="ft">
+                <p>Jonathan Chu &mdash; <span class="spamspan"><span class="u">jonathan.chu</span>[at]<span class="d">me [dot] com</span></span> &ndash; (347)-503-9000</p>
+    </div><!--// footer -->
 
 
 </div><!--// end: doc -->
