--- a/resume/index.html
+++ b/resume/index.html
@@ -46,7 +46,7 @@
                         <h2>Profile</h2>
                     </div>
                     <div class="yui-u">
-                        <p class="enlarge"><span>Seven years'</span> experience developing and supporting a variety of critical web and desktop applications in the enterprise environment.</p>
+                        <p class="enlarge"><span>Eight years'</span> experience developing and supporting a variety of critical web and desktop applications in the enterprise environment.</p>
                     </div>
 
                 </div>
